--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "start": "concurrent \"npm run tsc:w\" \"npm run lite\" ",
     "tsc": "tsc",
+    "test": "live-server --open=test/unit-tests.html --port=3000",
     "tsc:w": "tsc -w",
     "lite": "lite-server",
     "typings": "typings",
@@ -22,8 +23,10 @@
   "devDependencies": {
     "bootstrap": "^3.3.6",
     "concurrently": "^2.0.0",
+    "jasmine-core": "2.4.1",
     "jquery": "^2.2.1",
     "lite-server": "^2.1.0",
+    "live-server": "^0.9.2",
     "typescript": "^1.7.5",
     "typings": "^0.6.8"
   }
