research - unit test with karma, jasmine

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "start": "concurrent \"npm run tsc:w\" \"npm run lite\" ",
     "tsc": "tsc",
-    "test": "live-server --open=test/unit-tests.html --port=3000",
+    "build": "rm -rf dist && tsc -p src",
+    "test": "karma start karma.conf.js",
     "tsc:w": "tsc -w",
     "lite": "lite-server",
     "typings": "typings",
@@ -23,8 +24,14 @@
   "devDependencies": {
     "bootstrap": "^3.3.6",
     "concurrently": "^2.0.0",
+    "gulp": "^3.9.1",
+    "gulp-inject": "^3.0.0",
     "jasmine-core": "2.4.1",
     "jquery": "^2.2.1",
+    "karma": "^0.13.22",
+    "karma-chrome-launcher": "^0.2.2",
+    "karma-coverage": "^0.5.5",
+    "karma-jasmine": "^0.3.7",
     "lite-server": "^2.1.0",
     "live-server": "^0.9.2",
     "typescript": "^1.7.5",
