update api, admin page

--- a/api/Blog/src/Blog/project.json
+++ b/api/Blog/src/Blog/project.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "version": "1.0.0-*",
   "compilationOptions": {
     "emitEntryPoint": true
@@ -22,7 +22,11 @@
   },
 
   "frameworks": {
-    "dnx451": { },
+    "dnx451": {
+      "dependencies": {
+        "Microsoft.AspNet.WebApi.Cors": "5.2.3"
+      }
+    },
     "dnxcore50": { }
   },
 
