--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
   "license": "ISC",
   "dependencies": {
     "angular2": "2.0.0-beta.8",
-    "systemjs": "0.19.22",
     "es6-promise": "^3.0.2",
     "es6-shim": "^0.33.3",
+    "ng2-cookies": "^0.1.4",
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.2",
+    "systemjs": "0.19.22",
     "zone.js": "0.5.15"
   },
   "devDependencies": {
