--- a/api/Blog/src/Blog/project.lock.json
+++ b/api/Blog/src/Blog/project.lock.json
@@ -7166,7 +7166,8 @@
       "Microsoft.Extensions.Configuration.Json >= 1.0.0-rc1-final",
       "Microsoft.Extensions.Logging >= 1.0.0-rc1-final",
       "Microsoft.Extensions.Logging.Console >= 1.0.0-rc1-final",
-      "Microsoft.Extensions.Logging.Debug >= 1.0.0-rc1-final"
+      "Microsoft.Extensions.Logging.Debug >= 1.0.0-rc1-final",
+      "System.Linq >= 4.0.0"
     ],
     "DNX,Version=v4.5.1": [
       "Microsoft.AspNet.WebApi.Cors >= 5.2.3"
