--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.2",
     "systemjs": "0.19.22",
+    "tinymce": "^4.3.8",
     "zone.js": "0.5.15"
   },
   "devDependencies": {
