--- a/api/Blog/src/Blog/wwwroot/web.config
+++ b/api/Blog/src/Blog/wwwroot/web.config
@@ -1,5 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+   <appSettings>
+      <add key="cors:Origins" value="*" />
+      <add key="cors:Headers" value="*" />
+      <add key="cors:Methods" value="GET, POST, OPTIONS, PUT, DELETE" />
+   </appSettings>
   <system.webServer>
     <handlers>
       <add name="httpPlatformHandler" path="*" verb="*" modules="httpPlatformHandler" resourceType="Unspecified"/>
