--- a/api/Blog/src/Blog/project.json
+++ b/api/Blog/src/Blog/project.json
@@ -18,7 +18,9 @@
     "Microsoft.Extensions.Logging": "1.0.0-rc1-final",
     "Microsoft.Extensions.Logging.Console": "1.0.0-rc1-final",
     "Microsoft.Extensions.Logging.Debug": "1.0.0-rc1-final",
-    "System.Linq": "4.0.0"
+    "System.Linq": "4.0.0",
+    "System.Net.Http": "4.0.0",
+    "System.Web.Http.Common": "4.0.20126.16343"
   },
 
   "commands": {
